# node-regkey

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  binding.gyp  index.d.ts  index.js  install.js  package.json  pnpm-lock.yaml  rollup.config.js
.github/workflows/: publish.yml
examples/: example.js
include/: RegKey.h  RegKeyWrap.h
lib/: RegKey.js  RegValue.js
prebuilds/win32-arm64/: regkey.node
prebuilds/win32-ia32/: regkey.node
prebuilds/win32-x64/: regkey.node
scripts/: Error.js  RegKey.js  RegValue.js
src/: RegKey.cpp  RegKeyWrap.cpp  addon.cpp  binding.cpp
tests/: test.js
tests/scripts/: test.js
